--- a/sub/package.json
+++ b/sub/package.json
@@ -1,3 +1,10 @@
 {
-  "version": "1.3.1"
+  "private": true,
+  "name": "sub",
+  "version": "1.23.4",
+  "main": "out/index.js",
+  "typings": "out/index.d.ts",
+  "devDependencies": {
+    "typescript": "^4.0.5"
+  }
 }
