--- a/main/package.json
+++ b/main/package.json
@@ -1,9 +1,8 @@
 {
   "private": true,
   "name": "main",
-  "version": "1.23.4",
   "main": "index.js",
   "dependencies": {
-    "sub": "^1.0.0"
+    "sub": ""
   }
 }
